--- a/static/css/index.css
+++ b/static/css/index.css
@@ -115,6 +115,23 @@ body {
   margin: 0;
 }
 
+.dataset-carousel {
+  overflow: hidden;
+}
+
+.dataset-carousel .item {
+  margin: 2px;
+  overflow: hidden;
+  border: 1px solid #bbb;
+  border-radius: 10px;
+  padding: 0;
+  font-size: 0;
+}
+
+.dataset-carousel video {
+  margin: 0;
+}
+
 
 .interpolation-panel {
   background: #f5f5f5;
